[package]
name = "neutron"
version = "0.1.0"
edition = "2024"

[dependencies]
cel-interpreter = { version = "0.9.0", default-features = false }
chrono = "0.4"
memchr = "2.6.4"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.21.0"
md5 = "0.7.0"
urlencoding = "2.1.2"
